--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
 
   <body>
     <!-- card component -->
-    <div class="card">
-      <!-- image div -->
-      <div class="qr-image">
-        <img src="./images/image-qr-code.png" alt="QR code" />
+    <main>
+      <div class="card">
+        <!-- image div -->
+        <div class="qr-image">
+          <img src="./images/image-qr-code.png" alt="QR code" />
+        </div>
+        <!-- text div -->
+        <div class="text">
+          <h3>Improve your front-end skills by building projects</h3>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-      <!-- text div -->
-      <div class="text">
-        <h3>Improve your front-end skills by building projects</h3>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
-    </div>
+    </main>
     <!-- mention -->
     <div class="attribution">
       Challenge by
